implement form and orders

--- a/ABTechApp/ABTechApp/Views/Shared/_Layout.cshtml
+++ b/ABTechApp/ABTechApp/Views/Shared/_Layout.cshtml
@@ -21,9 +21,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("New", "About", "Order")</li>
-                    <li>@Html.ActionLink("Orders", "Contact", "Order")</li>
+                    <li>@Html.ActionLink("New", "New", "Order")</li>
+                    <li>@Html.ActionLink("Orders", "Index", "Order")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
