--- a/ABTechApp/ABTechApp/Views/Order/Details.cshtml
+++ b/ABTechApp/ABTechApp/Views/Order/Details.cshtml
@@ -39,11 +39,11 @@
             </td>
 
             <td>
-                @Model.WhoAssignedThis
+                @Model.WhoAssignedThis.Name
             </td>
 
             <td>
-                @Model.AssignedToWho
+                @Model.AssignedToWho.Name
             </td>
 
         </tr>
