--- a/ABTechApp/ABTechApp/Views/Shared/_Layout.cshtml
+++ b/ABTechApp/ABTechApp/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("New", "New", "Order")</li>
+                    <li>@Html.ActionLink("New Order", "New", "Order")</li>
                     <li>@Html.ActionLink("Orders", "Index", "Order")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
@@ -32,7 +32,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - ABTech Team</p>
         </footer>
     </div>
 
