--- a/ABTechApp/ABTechApp/Views/Shared/_LoginPartial.cshtml
+++ b/ABTechApp/ABTechApp/Views/Shared/_LoginPartial.cshtml
@@ -5,17 +5,24 @@
     {
     @Html.AntiForgeryToken()
 
-    <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">@User.Identity.GetUserName() <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-                <li><a href="@Url.Action("Index" , "Manage")">Account Settings</a></li>
-                <li><a href="@Url.Action("Mine" , "Order")">My Orders</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
-            </ul>
-        </li>
-    </ul>
+        <ul class="nav navbar-nav navbar-right">
+            <li >
+                <a href="#" class="notifications" tabindex="0" data-trigger="focus">
+                    <i class="glyphicon glyphicon-globe"></i>
+                    <span class="badge js-notifications-count hide"></span>
+                </a>
+            </li>
+
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">@User.Identity.GetUserName() <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="@Url.Action("Index", "Manage")">Account Settings</a></li>
+                    <li><a href="@Url.Action("Mine", "Order")">My Orders</a></li>
+                    <li role="separator" class="divider"></li>
+                    <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
+                </ul>
+            </li>
+        </ul>
     }
 }
 else
